[package]
name = "amaru-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
amaru-consensus = { git = "https://github.com/pragma-org/amaru.git" }
amaru-kernel = { git = "https://github.com/pragma-org/amaru.git" }
amaru-ledger = { git = "https://github.com/pragma-org/amaru.git" }
amaru-stores = { git = "https://github.com/pragma-org/amaru.git" }
pallas-network = "0.32.0"
pallas-traverse = "0.32.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
wasi = "0.14.2"
